--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- icon -->
-    <link rel="icon" type="image/png" href="public/pavicon.png" />
+    <link rel="icon" type="image/png" href="/pavicon.png" />
     <title>zeinirfansyah</title>
   </head>
   <body>
